Fix small transition whitespace on Cave for mobile devices

--- a/src/pages/HomePage/sections/PortfolioSection/PortfolioSection.module.scss
+++ b/src/pages/HomePage/sections/PortfolioSection/PortfolioSection.module.scss
@@ -1,4 +1,9 @@
 .PortfolioSection {
   overflow: hidden;
   background-color: rgb(10, 10, 10);
+
+  :first-child {
+    transform: translateY(-5px);
+    z-index: 10;
+  }
 }
